[B][COLOR gold]v1.8.9[/COLOR][/B]
- Fix toggling watched status when Trakt isn't auth'ed or indicators are set to 'Local"
    and Metahandler 3.99.x is installed

[B][COLOR gold]v1.8.8[/COLOR][/B]
- Fix dupes filter for openscrapers
- Minor code tweaks/settings adj

[B][COLOR gold]v1.8.6[/COLOR][/B]
- Added extra color option for Orion streams (Provider label only - optional)

[B][COLOR gold]v1.8.5[/COLOR][/B]
- Fix episodes thumb appearance in Estuary
- Append only the bare minimum of metadata on sources directory
- Various modules updates

[B][COLOR gold]v1.8.3[/COLOR][/B]
- Dupes checker tweaks:
    * now using infohash for magnet links instead of url check, so hopefully no more dupes
      accross torrent providers
    * fixed bug in dupes filter (thx Gkobu)
- cfscrape update (no idea who mod'ed it, but props towards them)

[B][COLOR gold]v1.8.2[/COLOR][/B]
- Fixed autoplay & cosmetic regressions caused by previous commits
- Added more color options

[B][COLOR gold]v1.8.0[/COLOR][/B]
- Sources appearance modifications [I](only tested with the default skin)[/I] :
    * added option for different color for the extra source infos (rip type, codec, size etc)
    * added option for double-line source appearance (extra source info text gets splited)
    * added simple source view option: lacks extra source info and coloring
       (ideal for non-debrid users - free hosters do not provide reliable infos anyway)
- Corresponding colored text on color selection settings (idea taken from Seren)

[B][COLOR gold]v1.7.8[/COLOR][/B]
- Fixed orionoid scraper (thx orion team for pointing out the bug)

[B][COLOR gold]v1.7.4[/COLOR][/B]
- Fixed issue with links skipping in the background while resolveurl was trying to
    transfer un-cached torrents to the debrid service, preventing the procedure.
- Orionoid scraper updates
- Micro-updates to menus, modules, cfscrape etc

[B][COLOR gold]v1.7.0[/COLOR][/B]
- Switched default scraper package to TheOath scrapers